--- a/roles/apache/tasks/main.yml
+++ b/roles/apache/tasks/main.yml
@@ -1,2 +1,12 @@
+# webserver/tasks/main.yml
 ---
-# tasks file for roles/apache
+- name: Install Apache
+  ansible.builtin.apt:
+    name: apache2
+    state: present
+
+- name: Start Apache
+  ansible.builtin.service:
+    name: apache2
+    state: started
+#    enabled: true
